@@ -1,6 +1,7 @@
 0.4.2 (in development)
 ------------------------------------------------------------------------
 - Feature: [#13634] Add ability to sell merchandise in random colours.
+- Feature: [#16283] Added parkinfo command line tool to list objects in a save file. 
 - Feature: [#16662] Show a warning message when g2.dat is mismatched.
 - Feature: [#17107] Ride operating settings can be set via text input.
 - Improved: [#15358] Park and scenario names can now contain up to 128 characters.
